[package]
name = "dev"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
semver = "1.0.25"

ratatui = "0.29"
crossterm = "0.28"
crossbeam-channel = "0.5"
